--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -7,7 +7,7 @@
     <form class="site-form" method="post" action="{% url 'accounts:login' %}">
         {% csrf_token %} {# to know that request is form my own application #}
         {{ form }}
-        {% if reques.GET.next %}
+        {% if request.GET.next %}
             <input type="hidden" name="next" value="{{ request.GET.next }}" >
 
         {% endif %}
