--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,8 +1,9 @@
 body {
     background: #0f121f;
-    background-image: url('stars.jpg');
-    background-repeat: repeat-x;
+    background-image: url('night-sky3.jpg');
+    background-repeat: repeat;
     color: #fff;
+    background-size: cover;
 
 }
 
@@ -29,7 +30,7 @@ a, a:hover, a:visited {
 
 div.wrapper h1 {
     text-align: center;
-    margin: 60px  auto;
+    margin: 60px auto;
     font-size: 2.4em;
 
 }
@@ -76,6 +77,7 @@ nav button {
 .article h2 {
     font-size: 1.4em;
 }
+
 .article .author {
     padding: 10px;
     background: #00dba0;
@@ -85,58 +87,68 @@ nav button {
     margin: 0;
     color: #0f121f;
 }
-.article_details .article{
-   padding: 0;
+
+.article_details .article {
+    padding: 0;
 }
-.article_details .article img{
+
+.article_details .article img {
     width: 100%;
     height: 300px;
 }
-.article_details .article h2{
-   text-align: center;
+
+.article_details .article h2 {
+    text-align: center;
     margin: 20px auto;
     font-size: 2em;
 
 }
+
 .article_details .article p {
-    text-align:center ;
+    text-align: center;
 }
-.site-form{
+
+.site-form {
     margin-top: 60px;
     border: 1px solid #00dba0;
     padding: 20px;
 }
-.site-form input ,.site-form textarea {
+
+.site-form input, .site-form textarea {
     display: block;
     margin: 10px 10px 0 10px;
     padding: 10px;
 }
+
 a.highlight {
     border: 1px solid #00dba0;
     padding: 10px;
     border-radius: 4px;
     color: #00dba0;
 }
-.helptext , .helptext ul{
+
+.helptext, .helptext ul {
     margin: 0 auto 20px;
     color: #bbb;
     display: block;
     font-size: .9em;
 }
-.errorlist li{
+
+.errorlist li {
     padding: 10px;
     list-style-type: none;
     border: 1px solid #ff5722;
-    color : #ff5722;
+    color: #ff5722;
     margin: 10px 0;
 }
+
 .errorlist {
     padding: 0;
 }
 
-.site-form input[type='submit']{
+.site-form input[type='submit'] {
     background: #00dba0;
-    border:0;
+    border: 0;
     color: white;
     font-size: 1.2em;
     border-radius: 10px;
